--- a/webroot/index.css
+++ b/webroot/index.css
@@ -25,6 +25,20 @@ body {
   color: var(--base02);
 }
 
+#left-header {
+  align-self: stretch;
+  grid-template-rows: auto auto;
+  display: grid;
+}
+
+#left-header > div:nth-child(1) {
+  padding-top: 1.1em;
+}
+
+#left-header > div:nth-child(2) {
+  align-self: flex-end;
+}
+
 #watchlist {
   grid-column-start: 1;
   grid-column-end: 1;
@@ -54,6 +68,7 @@ body {
   height: 2rem;
   padding-left: 10px;
   padding-right: 10px;
+  color: var(--base02);
 }
 
 #exchange-container {
@@ -68,6 +83,11 @@ body {
 }
 
 #exchange-container > img {
+  height: 1.2rem;
+  padding-left: 10px;
+}
+
+#exchange-container > svg {
   height: 1.2rem;
   padding-left: 10px;
 }
